# cpp_template_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
my_class/: my_class.cpp  my_class.h
scripts/: build.sh  install_dep.sh  test.sh
src/: CMakeLists.txt  pch.h
src/move/: move.cpp  move.h
src/timer/: timer.cmake
tests/: CMakeLists.txt
tests/move_test/: move_test.cpp
tests/my_class/: mock_my_class.h  my_class_test.cpp
